--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
 
     <div class="jumbotron">
-      <h1>creating beautiful, efficient digital experiences</h1>
+      <h1>Creating beautiful, efficient digital experiences</h1>
   </div>
   <!--ABOUT-->
   <div class="container" id="about">
@@ -63,8 +63,8 @@
             <img src="img/itsme.jpg" class="img-responsive img-circle" />
         </div>
         <div class="col-md-6" id="bio">
-            <p>I am a graduate of Startup Institute NY's Web Design Track and a UX/UI Designer with a love for front-end development.</p>
-            <p>My background includes a BA in Psychology from Bryn Mawr College and experience in non-profit development and education. When I'm not tinkering with code, I can be found stargazing, drinking tea, or hanging out in cat cafes.</p>
+            <p>I am a a UX/UI designer with a love for front-end development, and a graduate of Startup Institute New York's Web Design Track. My background includes a BA in Psychology from Bryn Mawr College and experience in non-profit development and education.</p>
+            <p>In my spare time, I enjoy amateur astronomy, biking, and hanging out in cat cafes.</p>
 
             <p>Interested in working with me? <a href="#contact">Contact me</a> for more information!</p>
             <a href="MartinezUXResume.pdf" target="_blank">VIEW FULL RESUME</a>
