--- a/index.html
+++ b/index.html
@@ -63,36 +63,62 @@
             <img src="img/itsme.jpg" class="img-responsive img-circle" />
         </div>
         <div class="col-md-6" id="bio">
-            <p>I am a a UX/UI designer with a love for front-end development, and a graduate of Startup Institute New York's Web Design Track. My background includes a BA in Psychology from Bryn Mawr College and experience in non-profit development and education.</p>
-            <p>In my spare time, I enjoy amateur astronomy, biking, and hanging out in cat cafes.</p>
+            <p>I am a UX/UI designer with a love for front-end development.
+                My background includes: Startup Institute New York's Web Design Track, a BA in Psychology from Bryn Mawr College, and experience in non-profit development and education.</p>
+                <p>In my spare time, I enjoy amateur astronomy, biking, and hanging out in cat cafes.</p>
+                <p>Currently, I am available for freelance and full-time opportunities. Interested in working with me? <a href="#contact">Contact me</a> for more information!</p>
+                <a href="MartinezUXResume.pdf" target="_blank">VIEW FULL RESUME &gt;&gt;</a>
+            </div>
+        </div>
+    </div>
+    <!--PORTFOLIO-->
+    <div class="container" id="portfolio">
+        <h1>Portfolio</h1>
+        <div class="row">
+            <!-- Campus Perks -->
+            <div class="col-sm-6 col-md-4">
+                <div class="thumbnail">
+                  <a href="http://www.arielemartinez.com/cp" target="_blank">
+                      <img src="img/cp.png" class="img-responsive" />
+                  </a>
+                  <div class="caption">
+                    <h4>Campus Perks</h4>
+                    <p>UX/UI Design, Front-End Development</p>
+                </div>
+            </div>
+        </div>
+        
 
-            <p>Interested in working with me? <a href="#contact">Contact me</a> for more information!</p>
-            <a href="MartinezUXResume.pdf" target="_blank">VIEW FULL RESUME</a>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+              <a href="http://www.arielemartinez.com/cheese" target="_blank">
+                  <img src="img/sammies.png" class="img-responsive" />
+              </a>
+              <div class="caption">
+                <h4>Cheese Sammies</h4>
+                <p>UX/UI Design, Front-End Development</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+            <a href="img/bm-01.png" data-lightbox="beermenus" data-title="Customizable Tap Takeover Design">
+              <img src="img/bm-logo-01.png" class="img-responsive" />
+          </a>
+          <a href="img/bm-02.png" data-lightbox="beermenus" data-title="Table Tent Design"></a>
+          <a href="img/bm-03.png" data-lightbox="beermenus" data-title="Table Tent Design"></a>
+          <a href="img/bm-04.png" data-lightbox="beermenus" data-title="Table Tent Design"></a>
+          <div class="caption">
+            <h4>Beer Menus</h4>
+            <p>Print &amp; Graphic Design</p>
         </div>
     </div>
 </div>
-<!--PORTFOLIO-->
-<div class="container" id="portfolio">
-    <h1>Portfolio</h1>
-    <div class="row">
-        <div class="col-sm-6 col-md-4">
-            <a href="http://www.arielemartinez.com/cp" target="_blank">
-                <img src="img/cp.png" class="img-responsive" />
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <a href="http://www.arielemartinez.com/cheese" target="_blank">
-                <img src="img/sammies.png" class="img-responsive" />
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <a href="img/bm-01.png" data-lightbox="beermenus" data-title="Customizable Tap Takeover Design"><img src="img/bm.png" class="img-responsive" /></a>
-            <a href="img/bm-02.png" data-lightbox="beermenus" data-title="Table Tent Design"></a>
-            <a href="img/bm-03.png" data-lightbox="beermenus" data-title="Table Tent Design"></a>
-            <a href="img/bm-04.png" data-lightbox="beermenus" data-title="Table Tent Design"></a>
-        </div>
-    </div><!--end row-->
+
 </div>
+</div><!--end portfolio section-->
+
 <!--CONTACT-->
 <div class="container" id="contact">
     <h1>Contact</h1>
@@ -101,7 +127,7 @@
 </div>
 <!--FOOTER-->
 <div class="footer">
-    <p>&copy;2016 ariele martinez. made with love in brooklyn, powered by the imperium silver crystal.</p>
+    <p>&copy;2016 Ariele Martinez. Made with &#9829; in Brooklyn. Powered by the Milennium Crystal.</p>
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
