--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <h1>Creating beautiful, efficient digital experiences</h1>
   </div>
   <!--ABOUT-->
-  <div class="container" id="about">
+  <div class="container-fluid" id="about">
     <h1>About Me</h1>
     <div class="row">
         <div class="col-md-6">
@@ -72,7 +72,7 @@
         </div>
     </div>
     <!--PORTFOLIO-->
-    <div class="container" id="portfolio">
+    <div class="container-fluid" id="portfolio">
         <h1>Portfolio</h1>
         <div class="row">
             <!-- Campus Perks -->
@@ -120,7 +120,7 @@
 </div><!--end portfolio section-->
 
 <!--CONTACT-->
-<div class="container" id="contact">
+<div class="container-fluid" id="contact">
     <h1>Contact</h1>
     <p>Feel free to contact me via e-mail at acmartine[at]gmail.com. You can also find my chronicles on Twitter as <a href="http://www.twitter.com/arielebydesign" target="_blank">&#64;arielebydesign</a> or connect with me on <a href="http://www.linkedin.com/in/arielemartinez" target="_blank">LinkedIn</a>.</p>
     <!--include linkedin, twitter, github, angellist, email-->
