bb updates june 17.16

--- a/bb/index.html
+++ b/bb/index.html
@@ -1,206 +1,302 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Artisanal baked goods in Manayunk, Philadelphia">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Breakin Bread Bakery</title>
+	<link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <title>Breakin Bread Bakery</title>
+	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+      <![endif]-->
+      <!-- Custom CSS  -->
+      <link rel="stylesheet" type="text/css" href="css/custom.css">
+  </head>
 
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
-
-<!--[if lte IE 8]>
-  
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-old-ie-min.css">
-  
-    <![endif]-->
-    <!--[if gt IE 8]><!-->
-
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css">
-
-    <!--<![endif]-->
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/custom.css">
-    <!--[if lte IE 8]>
-        <link rel="stylesheet" href="css/marketing-old-ie.css">
-        <![endif]-->
-        <!--[if gt IE 8]><!-->
-        <!--<![endif]-->
-
-    </head>
-
-    <body>
-
-        <div class="header">
-            <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-                <a class="pure-menu-heading" href="">Breakin Bread Bakery</a>
-
-                <ul class="pure-menu-list">
-                    <li class="pure-menu-item pure-menu-selected"><a href="#philo" class="pure-menu-link">Philosophy</a></li>
-                    <li class="pure-menu-item"><a href="#menu" class="pure-menu-link">Menu</a></li>
-                    <li class="pure-menu-item"><a href="#gallery" class="pure-menu-link">Gallery</a></li>
-                    <li class="pure-menu-item"><a href="#hours" class="pure-menu-link">Location &amp; Hours</a></li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="splash-container">
-            <div class="splash">
-                <h1 class="splash-head">Breakin Bread</h1>
-                <p class="splash-subhead">
-                    Artisanal Baked Goods
-                </p>
-            </div>
-        </div>
-
-        <div class="content-wrapper" id="philo">
-            <div class="ribbon l-box-lrg pure-g">
-                <div class="l-box-lrg is-center pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
-                    <img class="pure-img-responsive" src="http://placehold.it/350x200" />
-                </div>
-                <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
-
-                    <h2 class="content-head content-head-ribbon">Our Philosophy</h2>
-
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor.
-                    </p>
-                </div>
-            </div>
-
-            <div class="content" id="menu">
-                <h2 class="content-head is-center">Menu</h2>
-                <h4 class="content-head is-center">Breads</h4>
-
-                <!--Menu-->
-                <div class="pure-g">
-                    <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-
-                        <h3 class="content-subhead">
-                            Baguette 3.80
-                        </h3>
-                    </div>
-                    <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-                        <h3 class="content-subhead">
-                            Ciabatta
-                        </h3>
-                        <ul>
-                            <li>Plain 4.10 (4.50 dozen rolls)</li>
-                            <li>Porcini and Sage 4.95 (4.85 dozen rolls)</li>
-                            <li>Garlic 4.95 (4.85 dozen rolls)</li>
-                        </ul>
-                    </div>
-                    <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-                        <h3 class="content-subhead">
-                            Rye
-                        </h3>
-                        <ul>
-                            <li>Plain 6 (3 half)</li>
-                            <li>Onion 7 (3.50 half)</li>
-                            <li>Sour Cherry 7</li>
-                        </ul>
-                    </div>
-                    <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-                        <h3 class="content-subhead">
-                            Levain (Sourdough)
-                        </h3>
-                        <h5 class="content-subhead">
-                            9.80 Whole Loaf<br> 4.90 Half Loaf<br> 4.35 Boule</h5>
-                            <ul>
-                                <li>Fruitopia 5.60</li>
-                                <li>Black Olive and Goat Cheese 5.75</li>
-                                <li>Rosemary Boule 4.65</li>
-                            </ul>
-                        </div>
-                        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-
-                            <h3 class="content-subhead">
-                                Multigrain
-                            </h3>
-                            <p>
-                                9.90 whole (4.95 half)
-                            </p>
-                        </div>
-                        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-                            <h3 class="content-subhead">
-                                Orange Brioche
-                            </h3>
-                            <p>
-                                10.00 whole (5.00 half)
-                            </p>
-                        </div>
-                        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-                            <h3 class="content-subhead">
-                                Potato 5.40
-                            </h3>
-                        </div>
-                        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-                            <h3 class="content-subhead">
-                                Milk Bread
-                            </h3>
-                            <p>
-                                8.80 whole (4.40 half)
-                            </p>
-                        </div>
-                    </div>
-                    <!--END Menu-->
-                </div>
-
-                <div class="content ribbon" id="gallery">
-                    <h2 class="content-head content-head-ribbon is-center">Gallery</h2>
-
-                    <!--Gallery-->
-                    <div class="">
-                        Coming Soon
-                    </div>
-                    <!--END Gallery-->
-                </div>
-                <div class="content" id="hours">
-                    <h2 class="content-head is-center">Location &amp; Hours</h2>
-
-                    <div class="pure-g">
-                        <div class="l-box-lrg pure-u-1 pure-u-md-2-5">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3055.225742469205!2d-75.22588968511836!3d40.025739087250436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6b8956f2fd2d5%3A0x7e7f461b2c58e81f!2sBreakin+Bread+Bakery!5e0!3m2!1sen!2sus!4v1463085227986" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-                        </div>
-
-                        <div class="l-box-lrg pure-u-1 pure-u-md-2-5">
-                            <h4>Address &amp; Phone</h4>
-                            <p>
-                                4351 Main Street, Philadelphia, PA 19127.<br>
-                                <i class="fa fa-phone" aria-hidden="true"></i> (267) 323-2321  
-                            </p>
-
-                            <h4>Hours</h4>
-                            <p>Thursday 8 AM - 5 PM<br>
-                                Friday 8 AM - 6 PM<br>
-                                Saturday 8 AM - 6 PM<br>
-                                Sunday 8 AM - 5 PM<br>
-                                Monday - Wednesday CLOSED</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="pure-g">
-                        <div class="pure-u-1-3"></div>
-                        <div class="pure-u-1-3">
-                           <div id="yelpwidget"></div>
-                       </div>
-                       <div class="pure-u-1-3"></div>
-                   </div>
-
-                   <div class="footer l-box is-center">
-                    <a href="https://www.facebook.com/Breakinbreadbakery/" target="_blank"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a>
-                    <a href="http://www.twitter.com/breakinbreadbak" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
-                    <a href="http://www.yelp.com/biz/breakin-bread-bakery-philadelphia" target="_blank"><i class="fa fa-yelp fa-2x" aria-hidden="true"></i></a>
-                    <br>
-                    &copy;2016 Breakin Bread Bakery. 4351 Main Street, Philadelphia, PA 19127. (267) 323-2321.
-                </div>
-
-            </div>
-
-            <script>(function() { var s = document.createElement("script");s.async = true;s.onload = s.onreadystatechange = function(){getYelpWidget("breakin-bread-bakery-philadelphia","300","RED","y","y","1");};s.src='http://chrisawren.com/widgets/yelp/yelpv2.js' ;var x = document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s, x);})();</script>
-        </body>
-        </html>
+  <body>
+  	<!-- Navigation -->
+  	<nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
+  		<div class="container topnav">
+  			<!-- Brand and toggle get grouped for better mobile display -->
+  			<div class="navbar-header">
+  				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+  					<span class="sr-only">Toggle navigation</span>
+  					<span class="icon-bar"></span>
+  					<span class="icon-bar"></span>
+  					<span class="icon-bar"></span>
+  				</button>
+  				<a class="navbar-brand topnav" href="#">Breakin Bread</a>
+  			</div>
+  			<!-- Collect the nav links, forms, and other content for toggling -->
+  			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+  				<ul class="nav navbar-nav navbar-right">
+  					<li>
+  						<a href="#phil">Philosophy</a>
+  					</li>
+  					<li>
+  						<a href="#menu">Menu</a>
+  					</li>
+  					<li>
+  						<a href="#gallery">Gallery</a>
+  					</li>
+  					<li>
+  						<a href="#loc">Location &amp; Hours</a>
+  					</li>
+  				</ul>
+  			</div>
+  			<!-- /.navbar-collapse -->
+  		</div>
+  		<!-- /.container -->
+  	</nav>
+  	<!--Page Content-->
+  	<div class="container-fluid" id="banner">
+  		<div class="row">
+  			<h1>Breakin Bread Bakery</h1>
+  			<p>Artisanal Baked Goods</p>
+  		</div>
+  	</div>
+  	<div class="container-fluid content" id="phil">
+  		<h1>Our Philosophy</h1>
+  		<div class="row">
+  			<div class="col-sm-5">
+  				<img src="http://placehold.it/200x200" class="img-circle" />
+  			</div>
+  			<div class="col-sm-7">
+  				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+  					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+  					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+  					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+  					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  				</p>
+  			</div>
+  		</div>
+  	</div>
+  	<div class="container-fluid" id="menu">
+  		<div class="row">
+  			<div class="col-sm-12">
+  				<div class="row">
+  					<h1>Menu</h1>
+  					<h2>Breads</h2>
+  				</div><!--close row-->
+  			</div>
+  			<div class="row">
+  				<div class="col-sm-4">
+  					<h4>Baguette</h4> 3.80
+  				</div>
+  				<div class="col-sm-4">
+  					<h4>Multigrain</h4>
+  					<ul>
+  						<li>Whole 9.90</li>
+  						<li>Half 4.90</li>
+  						<li>Boule 4.35</li>
+  					</ul>
+  				</div>
+  				<div class="col-sm-4">
+  					<h4>Orange Brioche</h4>
+  					<ul>
+  						<li>Whole 10.00</li>
+  						<li>Half 5.00</li>
+  					</ul>
+  				</div>
+  			</div><!--close row-->
+  			<div class="row">
+  				<div class="col-sm-4">
+  					<h4>Potato</h4> 5.40
+  				</div>
+  				<div class="col-sm-4">
+  					<h4>Milk Bread</h4>
+  					<ul>
+  						<li>Whole 8.80</li>
+  						<li>Half 4.40</li>
+  					</ul>
+  				</div>
+  				<div class="col-sm-4">
+  					<h4>Burger Buns</h4>
+  					<ul>
+  						<li>Dozen 6.50</li>
+  						<li>Half dozen 3.25</li>
+  						<li>Per bun 1.00</li>
+  					</ul>
+  				</div>
+  			</div><!--close row-->
+  			<div class="row">
+  				<div class="col-sm-4">
+  					<h4>Ciabatta</h4>
+  					<ul>
+  						<li>Plain 4.10 (4.50 dozen rolls)</li>
+  						<li>Porcini and Sage 4.95 (4.85 dozen rolls)</li>
+  						<li>Garlic 4.95 (4.85 dozen rolls)</li>
+  					</ul>
+  				</div>
+  				<div class="col-sm-4">
+  					<h4>Rye</h4>
+  					<ul>
+  						<li>Plain 6.00 (Half 3.00)</li>
+  						<li>Onion 7.00 (3.50 half)</li>
+  						<li>Sour Cherry 7.00</li>
+  					</ul>
+  				</div>
+  				<div class="col-sm-4">
+  					<h4>Levain (Sourdough)</h4>
+  					<ul>
+  						<li>Whole Loaf 9.80 Half Loaf 4.90 Boule 4.35</li>
+  						<li>Fruitopia 5.60</li>
+  						<li>Black Olive and Goat Cheese 5.75</li>
+  						<li>Rosemary Boule 4.65</li>
+  					</ul>
+  				</div>
+  			</div><!--close row, end Breads section-->
+  			<div class="col-sm-12">
+  				<h2>Pastries &amp; Sweets</h2>
+  			</div>
+  			  			<div class="row">
+  				<div class="col-sm-4">
+  					<h4>Brioche Buns</h4> 3.25
+  					<ul>
+  						<li>Nutella</li>
+  						<li>Plum</li>
+  						<li>Lemon</li>
+  						<li>Cherry</li>
+  					</ul>
+  				</div>
+  				<div class="col-sm-4">
+  					<h4>Brownies</h4> 2.50
+  				</div>
+  				<div class="col-sm-4">
+  					<h4>Cinnamon Bun</h4> 3.25
+  				</div>
+  			</div><!--close row-->
+  			<div class="row">
+  				<div class="col-sm-4">
+  					<h4>Cookies</h4> 2.25
+  					<ul>
+  						<li>Chocolate Chip</li>
+  						<li>Oatmeal Raisin</li>
+  						<li>Peanut Butter Chocolate Chip</li>
+  					</ul>
+  				</div>
+  				<div class="col-sm-4">
+  					<h4>Croissants</h4>
+  					<ul>
+  						<li>Plain 3.00</li>
+  						<li>Almond 3.25</li>
+  						<li>Chocolate 3.50</li>
+  						<li>Pistachio 3.25</li>
+  					</ul>
+  				</div>
+  				<div class="col-sm-4">
+  					<h4>Danish</h4> 3.00
+  					<ul>
+  						<li>Apple</li>
+  						<li>Cheese</li>
+  						<li>Cherry</li>
+  						<li>Peach</li>
+  					</ul>
+  				</div>
+  			</div><!--close row-->
+  			<div class="row">
+  				<div class="col-sm-4">
+  					<h4>Macaroons</h4> 2.45
+  					<ul>
+  						<li>Caramel Coconut</li>
+  					</ul>
+  				</div>
+  				<div class="col-sm-4">
+  					<h4>Muffins</h4> 3.00
+  					<ul>
+  						<li>Blueberry with Almonds</li>
+  					</ul>
+  				</div>
+  				<div class="col-sm-4">
+  					<h4>Scones</h4> 3.00
+  					<ul>
+  						<li>Blueberry</li>
+  						<li>Cranberry Orange</li>
+  						<li>Cherry Lime</li>
+  						<li>Apricot Fig</li>
+  					</ul>
+  				</div>
+  			</div>
+  			<div class="row">
+  				<div class="col-sm-4">
+  					<h4>Sticky Buns</h4> 3.75
+  				</div>
+  				<div class="col-sm-4">
+  					<h4>Ham &amp; Cheese Croissant</h4> 3.75
+  				</div>
+  				<div class="col-sm-4">
+  					<h4>Turkey Bacon Croissant</h4> 3.75
+  					<ul>
+  						<li>2 pieces</li>
+  					</ul>
+  				</div>
+  			</div>
+  			<div class="row">
+  				<div class="col-sm-4">
+  					<h4>Fig Bar Shortbread</h4> 2.45
+  				</div>
+  				<div class="col-sm-4">
+  					<h4>Pistachio Shortbread</h4> 2.45
+  				</div>
+  				<div class="col-sm-4">
+  					<h4>Mexican Cheese Bombs</h4> 3.00
+  				</div>
+  			</div>
+  		</div>
+  	</div>
+  </div>
+  <div class="container-fluid content" id="gallery">
+  	<div class="col-sm-12">
+  		<h1>Gallery</h1>
+  		<h4><em>Coming Soon</em></h4>
+  	</div>
+  	<div class="row">
+  		<div class="col-lg-3 col-md-4 col-xs-6">
+  			<img class="img-responsive thumb" src="http://placehold.it/400x300" />
+  		</div>
+  		<div class="col-lg-3 col-md-4 col-xs-6">
+  			<img class="img-responsive thumb" src="http://placehold.it/400x300" />
+  		</div>
+  		<div class="col-lg-3 col-md-4 col-xs-6">
+  			<img class="img-responsive thumb" src="http://placehold.it/400x300" />
+  		</div>
+  		<div class="col-lg-3 col-md-4 col-xs-6">
+  			<img class="img-responsive thumb" src="http://placehold.it/400x300" />
+  		</div>
+  	</div>
+  </div>
+  <div class="container-fluid" id="loc">
+  	<h1>Location &amp; Hours</h1>
+  	<div class="row">
+  		<div class="col-sm-6">
+  			<h4>Address &amp; Phone</h4>
+  			4351 Main Street<br />
+  			Philadelphia, PA 19127<br />
+  			<span class="glyphicon glyphicon-earphone"></span> 267.323.2321
+  			<h4>Hours</h4>
+  			Thursday and Sunday 8 am - 6 pm</br />
+  			Friday and Saturday 8 am - 5 pm<br />
+  			Closed Monday - Wednesday<br />
+  			<h3><a href="http://www.yelp.com/biz/breakin-bread-bakery-philadelphia" target="_blank">Visit us on Yelp</a></h3>
+  				<div class="centerBlock">
+  					<div id="yelpwidget"></div>
+  				</div>
+  		</div>
+  		<div class="col-sm-6">
+  			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3055.225742469205!2d-75.22588968511836!3d40.025739087250436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6b8956f2fd2d5%3A0x7e7f461b2c58e81f!2sBreakin+Bread+Bakery!5e0!3m2!1sen!2sus!4v1463085227986" width="400" height="300" frameborder="0" style="border:0" allowfullscreen=""></iframe>
+  		</div>
+  	</div>
+  </div>
+  <div class="col-sm-12" id="footer">
+  	&copy; 2016 Breakin Bread Bakery<br /> 4351 Main Street, Philadelphia, PA 19127<br /> (267) 323-2321
+  </div>
+  <script src="js/jquery-3.0.0.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="js/smoothscroll.js"></script>
+  <script>(function() { var s = document.createElement("script");s.async = true;s.onload = s.onreadystatechange = function(){getYelpWidget("breakin-bread-bakery-philadelphia","300","RED","y","n","0");};s.src='http://chrisawren.com/widgets/yelp/yelpv2.js' ;var x = document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s, x);})();</script>
+</body>
+</html>
