--- a/bb/index.html
+++ b/bb/index.html
@@ -22,7 +22,7 @@
   		<div class="container topnav">
   			<!-- Brand and toggle get grouped for better mobile display -->
   			<div class="navbar-header">
-  				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+  				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
   					<span class="sr-only">Toggle navigation</span>
   					<span class="icon-bar"></span>
   					<span class="icon-bar"></span>
@@ -31,7 +31,7 @@
   				<a class="navbar-brand topnav" href="#">Breakin Bread</a>
   			</div>
   			<!-- Collect the nav links, forms, and other content for toggling -->
-  			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+  			<div class="collapse navbar-collapse" id="navbar">
   				<ul class="nav navbar-nav navbar-right">
   					<li>
   						<a href="#phil">Philosophy</a>
@@ -295,8 +295,8 @@
   	&copy; 2016 Breakin Bread Bakery<br /> 4351 Main Street, Philadelphia, PA 19127<br /> (267) 323-2321
   </div>
   <script src="js/jquery-3.0.0.js"></script>
-  <script src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/smoothscroll.js"></script>
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script>(function() { var s = document.createElement("script");s.async = true;s.onload = s.onreadystatechange = function(){getYelpWidget("breakin-bread-bakery-philadelphia","300","RED","y","n","0");};s.src='http://chrisawren.com/widgets/yelp/yelpv2.js' ;var x = document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s, x);})();</script>
 </body>
 </html>
