--- a/index.html
+++ b/index.html
@@ -1,138 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Ariele Martinez - UX/UI Design &amp; Front-End Development</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css?family=Palanquin:100" rel="stylesheet">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/custom.css" rel="stylesheet" type="text/css">
-    <link href="css/lightbox.css" rel="stylesheet">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>Ariele Martinez - UX/UI Design &amp; Front-End Development</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link href="https://fonts.googleapis.com/css?family=Palanquin:100" rel="stylesheet">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/custom.css" rel="stylesheet" type="text/css">
+  <link href="css/lightbox.css" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
       <![endif]-->
-  </head>
-  <body>
-    <!-- NAVIGATION-->
-    <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
+    </head>
+    <body>
+      <!-- NAVIGATION-->
+      <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
         <div class="container topnav">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand topnav" href="#">Ariele Martinez</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="#about">About</a>
-                    </li>
-                    <li>
-                        <a href="#portfolio">Portfolio</a>
-                    </li>
-                    <li>
-                        <a href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand topnav" href="#">Ariele Martinez</a>
+          </div>
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+              <li>
+                <a href="#about">About</a>
+              </li>
+              <li>
+                <a href="#portfolio">Portfolio</a>
+              </li>
+              <li>
+                <a href="#contact">Contact</a>
+              </li>
+            </ul>
+          </div>
+          <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
-    </nav>
+      </nav>
 
-    <div class="jumbotron">
-      <h1>Creating beautiful, efficient digital experiences</h1>
-  </div>
-  <!--ABOUT-->
-  <div class="container-fluid" id="about">
-    <h1>About Me</h1>
-    <div class="row">
-        <div class="col-md-6">
-            <img src="img/itsme.jpg" class="img-responsive img-circle" />
-        </div>
-        <div class="col-md-6" id="bio">
-            <p>I am a UX/UI designer with a love for front-end development.
-                My background includes: Startup Institute New York's Web Design Track, a BA in Psychology from Bryn Mawr College, and experience in non-profit development and education.</p>
-                <p>In my spare time, I enjoy amateur astronomy, biking, and hanging out in cat cafes.</p>
-                <p>Currently, I am available for freelance and full-time opportunities. Interested in working with me? <a href="#contact">Contact me</a> for more information!</p>
-                <a href="MartinezUXResume.pdf" target="_blank">VIEW FULL RESUME &gt;&gt;</a>
-            </div>
-        </div>
-    </div>
-    <!--PORTFOLIO-->
-    <div class="container-fluid" id="portfolio">
-        <h1>Portfolio</h1>
+      <div class="jumbotron">
+        <h1>Creating beautiful, efficient digital experiences</h1>
+      </div>
+      <!--ABOUT-->
+      <div class="container-fluid" id="about">
+        <h1>About Me</h1>
         <div class="row">
-            <!-- Campus Perks -->
-            <div class="col-sm-6 col-md-4">
-                <div class="thumbnail">
-                  <a href="http://www.arielemartinez.com/cp" target="_blank">
-                      <img src="img/cp.png" class="img-responsive" />
-                  </a>
-                  <div class="caption">
-                    <h4>Campus Perks</h4>
-                    <p>UX/UI Design, Front-End Development</p>
+          <div class="col-md-6">
+            <img src="img/itsme.jpg" class="img-responsive img-circle" />
+          </div>
+          <div class="col-md-6" id="bio">
+            <p>I am a UX/UI designer with a love for front-end development.
+              My background includes: Startup Institute New York's Web Design Track, a BA in Psychology from Bryn Mawr College, and experience in non-profit development and education.</p>
+              <p>In my spare time, I enjoy amateur astronomy, biking, and hanging out in cat cafes.</p>
+              <p>Currently, I am available for freelance and full-time opportunities. Interested in working with me? <a href="#contact">Contact me</a> for more information!</p>
+              <a href="MartinezUXResume.pdf" target="_blank">VIEW FULL RESUME &gt;&gt;</a>
+            </div>
+          </div>
+        </div>
+        <!--PORTFOLIO-->
+        <div class="container-fluid" id="portfolio">
+          <h1>Portfolio</h1>
+          <div class="row">
+            <div class="col-sm-4 col-md-4">
+              <div class="thumbnail">
+                <a href="http://www.thepolishedreview.com" target="_blank">
+                  <img src="img/polirevi.png" class="img-responsive" />
+                </a>
+                <div class="caption">
+                  <h4>The Polished Review</h4>
+                  <p>WordPress.org Setup, Design, and Content</p>
                 </div>
+              </div>
             </div>
-        </div>
-        
+            <!-- Campus Perks -->
+            <div class="col-sm-4 col-md-4">
+              <div class="thumbnail">
+                <a href="http://www.arielemartinez.com/cp" target="_blank">
+                  <img src="img/cp.png" class="img-responsive" />
+                </a>
+                <div class="caption">
+                  <h4>Campus Perks</h4>
+                  <p>UX/UI Design, Front-End Development</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-4 col-md-4">
+              <div class="thumbnail">
+                <a href="img/bm-01.png" data-lightbox="beermenus" data-title="Customizable Tap Takeover Design">
+                  <img src="img/bm-logo-01.png" class="img-responsive" />
+                </a>
+                <a href="img/bm-02.png" data-lightbox="beermenus" data-title="Table Tent Design"></a>
+                <a href="img/bm-03.png" data-lightbox="beermenus" data-title="Table Tent Design"></a>
+                <a href="img/bm-04.png" data-lightbox="beermenus" data-title="Table Tent Design"></a>
+                <div class="caption">
+                  <h4>Beer Menus</h4>
+                  <p>Print &amp; Graphic Design</p>
+                </div>
+              </div>
+            </div>
 
-        <div class="col-sm-6 col-md-4">
-            <div class="thumbnail">
-              <a href="http://www.arielemartinez.com/cheese" target="_blank">
+          </div><!--end row-->
+          <div class="row">
+            <div class="col-sm-4 col-md-4">
+              <div class="thumbnail">
+                <a href="http://www.arielemartinez.com/cheese" target="_blank">
                   <img src="img/sammies.png" class="img-responsive" />
-              </a>
-              <div class="caption">
-                <h4>Cheese Sammies</h4>
-                <p>UX/UI Design, Front-End Development</p>
+                </a>
+                <div class="caption">
+                  <h4>Cheese Sammies</h4>
+                  <p>UX/UI Design, Front-End Development</p>
+                </div>
+              </div>
             </div>
+          </div><!--end row-->
+
+        </div><!--end portfolio section-->
+
+        <!--CONTACT-->
+        <div class="container-fluid" id="contact">
+          <h1>Contact</h1>
+          <p>Feel free to contact me via e-mail at acmartine[at]gmail.com. You can also find my chronicles on Twitter as <a href="http://www.twitter.com/arielebydesign" target="_blank">&#64;arielebydesign</a> or connect with me on <a href="http://www.linkedin.com/in/arielemartinez" target="_blank">LinkedIn</a>.</p>
+          <!--include linkedin, twitter, github, angellist, email-->
         </div>
-    </div>
-
-    <div class="col-sm-6 col-md-4">
-        <div class="thumbnail">
-            <a href="img/bm-01.png" data-lightbox="beermenus" data-title="Customizable Tap Takeover Design">
-              <img src="img/bm-logo-01.png" class="img-responsive" />
-          </a>
-          <a href="img/bm-02.png" data-lightbox="beermenus" data-title="Table Tent Design"></a>
-          <a href="img/bm-03.png" data-lightbox="beermenus" data-title="Table Tent Design"></a>
-          <a href="img/bm-04.png" data-lightbox="beermenus" data-title="Table Tent Design"></a>
-          <div class="caption">
-            <h4>Beer Menus</h4>
-            <p>Print &amp; Graphic Design</p>
+        <!--FOOTER-->
+        <div class="footer">
+          <p>&copy;2016 Ariele Martinez. Made with &#9829; in Brooklyn. Powered by the Milennium Crystal.</p>
         </div>
-    </div>
-</div>
 
-</div>
-</div><!--end portfolio section-->
-
-<!--CONTACT-->
-<div class="container-fluid" id="contact">
-    <h1>Contact</h1>
-    <p>Feel free to contact me via e-mail at acmartine[at]gmail.com. You can also find my chronicles on Twitter as <a href="http://www.twitter.com/arielebydesign" target="_blank">&#64;arielebydesign</a> or connect with me on <a href="http://www.linkedin.com/in/arielemartinez" target="_blank">LinkedIn</a>.</p>
-    <!--include linkedin, twitter, github, angellist, email-->
-</div>
-<!--FOOTER-->
-<div class="footer">
-    <p>&copy;2016 Ariele Martinez. Made with &#9829; in Brooklyn. Powered by the Milennium Crystal.</p>
-</div>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/smoothscroll.js"></script>
-<script src="js/lightbox.js"></script>
-</body>
-</html>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/smoothscroll.js"></script>
+        <script src="js/lightbox.js"></script>
+      </body>
+      </html>
