--- a/index.html
+++ b/index.html
@@ -132,8 +132,7 @@
         <!--CONTACT-->
         <div class="container-fluid" id="contact">
           <h1>Contact</h1>
-          <p>Feel free to contact me via e-mail at acmartine[at]gmail.com. You can also find my chronicles on Twitter as <a href="http://www.twitter.com/arielebydesign" target="_blank">&#64;arielebydesign</a> or connect with me on <a href="http://www.linkedin.com/in/arielemartinez" target="_blank">LinkedIn</a>.</p>
-          <!--include linkedin, twitter, github, angellist, email-->
+          <p>Think we'd be a good fit? Do you have a burning question? Just want to say hello? Get in touch via e-mail at acmartine[at]gmail.com. You can also find my chronicles on Twitter as <a href="http://www.twitter.com/arielebydesign" target="_blank">&#64;arielebydesign</a> or connect with me on <a href="http://www.linkedin.com/in/arielemartinez" target="_blank">LinkedIn</a>.</p>
         </div>
         <!--FOOTER-->
         <div class="footer">
